--- a/.env
+++ b/.env
@@ -4,6 +4,6 @@
 # Prisma supports the native connection string format for PostgreSQL, MySQL, SQLite, SQL Server, MongoDB and CockroachDB.
 # See the documentation for all the connection string options: https://pris.ly/d/connection-strings
 
-DATABASE_URL="mongodb+srv://kadirmetin:fyCPsNU3RcDxeuSH@cluster0.qnrodpd.mongodb.net/twitter-clone"
+DATABASE_URL=""
 NEXTAUTH_JWT_SECRET="NEXT_AUTH_JWT_SECRET"
 NEXTAUTH_SECRET="NEXT_AUTH_SECRET"
