--- a/.env.example
+++ b/.env.example
@@ -5,5 +5,5 @@
 # See the documentation for all the connection string options: https://pris.ly/d/connection-strings
 
 DATABASE_URL=""
-NEXTAUTH_JWT_SECRET="NEXT_AUTH_JWT_SECRET"
-NEXTAUTH_SECRET="NEXT_AUTH_SECRET"
+NEXTAUTH_JWT_SECRET=""
+NEXTAUTH_SECRET=""
